--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,3 +41,71 @@ main{
     width: 100%;
     height: 100%;
 }
+
+
+.browser-logo{
+	height: 35%;
+	margin: 0 auto;
+	display: block;
+}
+
+.my-3{
+	margin: 1.5em 0;
+}
+
+.mb-2{
+	margin-bottom: 0.5em;
+}
+
+.copy-link-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 45px;
+}
+
+#copy-input-link{
+	height: 45px;
+	border: 1px solid #000;
+	border-radius: 5px 0 0 5px;
+	border-right: none;
+	padding: 0.5em 1em;
+	color: #000;
+}
+
+.copy-button{
+	width: 50px;
+	height: 100%;
+	border: 1px solid #000;
+	background-color: #FFF;
+	margin-left: -1px;
+	border-radius: 0 5px 5px 0;
+	font-size: 12px;
+	cursor: pointer;
+	padding: 0;
+	text-align: center;
+}
+
+.redirection{
+    background-color: white;
+    height: 100vh;
+    padding: 30px;
+}
+
+.btn{
+    display: block;
+    background-color: #f5f6fa;
+    border-radius: 8px;
+    height: 50px;
+    width: 100%;
+    border: 0.5px solid grey;
+    box-shadow: rgb(211, 208, 208) 2px 2px 2px;
+    font-weight: bold;
+}
+
+.frame-overlay{
+    align-self: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+}
