--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-main{
+main {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
@@ -7,18 +7,17 @@ main{
     width: 100%;
 }
 
-.header{
+.header {
     height: 10vh;
     background-color: red;
     width: 100%;
 }
 
-.video{
+.video {
     height: 75vh;
-    
 }
 
-.footer{
+.footer {
     height: 15vh;
     background-color: black;
     width: 100%;
@@ -30,69 +29,68 @@ main{
     font-weight: bold;
 }
 
-.camera-frame{
+.camera-frame {
     position: absolute;
-    width:80%;
+    width: 80%;
     margin: 10%;
     max-width: 400px;
 }
 
-.top-banner{
+.top-banner {
     width: 100%;
     height: 100%;
 }
 
-
-.browser-logo{
-	height: 35%;
-	margin: 0 auto;
-	display: block;
+.browser-logo {
+    height: 35%;
+    margin: 0 auto;
+    display: block;
 }
 
-.my-3{
-	margin: 1.5em 0;
+.my-3 {
+    margin: 1.5em 0;
 }
 
-.mb-2{
-	margin-bottom: 0.5em;
+.mb-2 {
+    margin-bottom: 0.5em;
 }
 
-.copy-link-container{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 45px;
+.copy-link-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
 }
 
-#copy-input-link{
-	height: 45px;
-	border: 1px solid #000;
-	border-radius: 5px 0 0 5px;
-	border-right: none;
-	padding: 0.5em 1em;
-	color: #000;
+#copy-input-link {
+    height: 45px;
+    border: 1px solid #000;
+    border-radius: 5px 0 0 5px;
+    border-right: none;
+    padding: 0.5em 1em;
+    color: #000;
 }
 
-.copy-button{
-	width: 50px;
-	height: 100%;
-	border: 1px solid #000;
-	background-color: #FFF;
-	margin-left: -1px;
-	border-radius: 0 5px 5px 0;
-	font-size: 12px;
-	cursor: pointer;
-	padding: 0;
-	text-align: center;
+.copy-button {
+    width: 50px;
+    height: 100%;
+    border: 1px solid #000;
+    background-color: #fff;
+    margin-left: -1px;
+    border-radius: 0 5px 5px 0;
+    font-size: 12px;
+    cursor: pointer;
+    padding: 0;
+    text-align: center;
 }
 
-.redirection{
+.redirection {
     background-color: white;
     height: 100vh;
     padding: 30px;
 }
 
-.btn{
+.btn {
     display: block;
     background-color: #f5f6fa;
     border-radius: 8px;
@@ -103,9 +101,28 @@ main{
     font-weight: bold;
 }
 
-.frame-overlay{
+.frame-overlay {
     align-self: center;
     justify-content: center;
     position: absolute;
+    width: 100%;
+}
+
+.take-button {
+    position: absolute;
+    right: 40%;
+    left: 40%;
+    bottom: 2.5em;
+    background: white;
+    border-radius: 50%;
+    height: 5em;
+    width: 5em;
+}
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     width: 100%;
 }
